# ts-pattern-mining

./: .gitignore  Kedro Tips.md  README.md  pyproject.toml
conf/base/: catalog.yaml  logging.yml  parameters.yaml
conf/base/parameters/: data_engineering.yml  dataload.yml  make_data_store.yml  model.yml  model_input.yml
docs/: code_writing_conventions.md
docs/source/: conf.py  index.rst
extensions/: nodes_decorators.py
extensions/binance-public-data/data/: symbols.json
extensions/binance-public-data/python/: postproc_download.py
extensions/binance-public-data/shell/: fetch-all-symbols-spec.sh
extensions/frama/: readme.md
extensions/frama/src/: frama_numpy.py  frama_numpy_performance.py  frama_use_case.py
extensions/snippets/: dask_to_ray.py  dataframe_chunker.py  dataframe_size_optimizer.py  nested_dict.py  train_test_valid_split.py  xarray_merge_multiindex.py
main/: cloud_cli.py  local_cli.py  parser.py
main/ai_platform/: run_ai_job.py  serializers.py
notebooks/: multi output xgbost.py
src/: requirements.txt  setup.py
src/hydra_kedro/: __init__.py  parametric_pipeline.py
src/hydra_kedro/decorators/: catalog_update.py  compose_api.py  hydra_main.py
src/midas_ai/: __init__.py  __main__.py  exceptions.py  hooks.py  pipeline_registry.py  settings.py
src/midas_ai/commons/: dask_memoptim.py
src/midas_ai/features/: data_store.py  variables_combiner.py
src/midas_ai/models/: base.py  classification.py
src/tests/: test_run.py
src/ts_pattern_miner/: __init__.py  __main__.py  pipeline_registry.py  settings.py  utils.py
(+81 files in other folders)
